<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_maps"> </string>
    <string name="app_name">No New Friends</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register"> Don\'t have an account? Sign up </string>
    <string name="btn_link_to_login">already registered. login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="option_get_place">Get place</string>
    <string name="default_info_title">Default Location</string>
    <string name="title_signup_page">Sign Up for Account</string>
    <string name="title_homesplash">Splash</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_home_activity">Home</string>
    <string name="forgot_password_msg">Please enter your email address in order to reset your password.</string>
    <string name="title_activity_maps_screen">Map</string>
    <string name="btn_notification">Click me for a Notification</string>
    <string name="title_activity_send_msg">sendMsg</string>
    <string name="sentMessg">Sent Message</string>
    <string name="button_send">send</string>
    <string name="settings_drinking">Drinking</string>
    <string name="settings_boardgames">Boardgames</string>
    <string name="settings_sports">Sports</string>
    <string name="settings_videogames">Videogames</string>
    <string name="settings_studying">Studying</string>
    <string name="settings_eating">Eating</string>
    <string name="edit_message">Enter a Message</string>
    <string name="title_activity_sent_msg_screen">sentMsgScreen</string>
    <string name="send_msg_button">Send a Message</string>
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_maps"> </string>
    <string name="app_name">No New Friends</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register"> Don\'t have an account? Sign up </string>
    <string name="btn_link_to_login">already registered. login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="option_get_place">Get place</string>
    <string name="default_info_title">Default Location</string>
    <string name="title_signup_page">Sign Up for Account</string>
    <string name="title_homesplash">Splash</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_home_activity">Home</string>
    <string name="forgot_password_msg">Please enter your email address in order to reset your password.</string>
    <string name="title_activity_maps_screen">Map</string>
    <string name="btn_notification">Click me for a Notification</string>
    <string name="title_activity_send_msg">sendMsg</string>
    <string name="sentMessg">Sent Message</string>
    <string name="button_send">send</string>
    <string name="settings_drinking">Drinking</string>
    <string name="settings_boardgames">Boardgames</string>
    <string name="settings_sports">Sports</string>
    <string name="settings_videogames">Videogames</string>
    <string name="settings_studying">Studying</string>
    <string name="settings_eating">Eating</string>
    <string name="edit_message">Enter a Message</string>
    <string name="title_activity_sent_msg_screen">sentMsgScreen</string>
    <string name="send_msg_button">Send a Message</string>
>>>>>>> 8972a911f9d3618269ead85292c7b20197b556c2
</resources>